# codex-proxy

./: .dockerignore  .env.default  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml
docs/: openai-compatibility.md
scripts/: benchmark_responses.py  start_cloudflare_quick_tunnel.sh  stop_cloudflare_quick_tunnel.sh
scripts/probe/: events.md  matrix.tsv  probe.sh
src/: codex_adapter.rs  codex_auth.rs  config.rs  errors.rs  files.rs  logging.rs  main.rs  middleware.rs  normalization.rs  state.rs  streaming.rs  test_support.rs  types.rs  upstream.rs
src/routes/: fallback.rs  files.rs  health.rs  mod.rs  models.rs  responses.rs
