[package]
name = "codex-proxy"
version = "0.2.0"
edition = "2024"

[lints.clippy]
expect_used = "deny"
manual_map = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_strip = "deny"
redundant_closure = "deny"
redundant_clone = "deny"
unwrap_used = "deny"
# Style lint from clippy 1.91+ that we don't care to enforce project-wide.
collapsible_if = "allow"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.8", features = ["multipart", "ws"] }
base64 = "0.22"
bytes = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2", "gzip", "brotli", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["trace", "sensitive-headers"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
